[project]
license = { text = "Apache-2.0" }
authors = [
  { name = "Cloud-Dog, Viewdeck Engineering Limited" }
]
name = "cloud-dog-logging"
version = "0.3.4"
description = "PS-40 Logging & Observability for Cloud-Dog services"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
json = ["python-json-logger>=2.0"]
config = ["cloud-dog-config>=0.2.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.23", "ruff>=0.4", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[project.urls]
"Source" = "https://github.com/cloud-dog-ai/platform-logging"
